build first version

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,5 +1,8 @@
 <div [id]="player" class="board">
     <div class="active-place">
+
+        <coin [active]="coin" (click)="toggleCoin()"></coin>
+
         <app-card [active]="true" [conditions]="conditions"></app-card>
 
         <div class="coins-place">
