--- a/src/app/components/card/poke/poke.component.scss
+++ b/src/app/components/card/poke/poke.component.scss
@@ -12,15 +12,21 @@
         z-index: 3;
         border-radius: 150px;
         color: #fff;
-        &.plus {
+        &.plus, &.trash {
             background: rgba(190, 0, 0, 0.7);
             right: -15px;
             top: -15px;
         }
-        &.minus {
+        &.minus, &.change {
             background: rgba(0, 190, 0, 0.7);
             left: -15px;
             bottom: -15px;
+        }
+        &.trash {
+            background: rgba(171, 183, 183, 0.9);
+        }
+        &.change {
+            background: rgba(242, 120, 75, 0.9);
         }
     }
 
@@ -42,16 +48,20 @@
 
         .btn {
             font-size: 20px;
+            line-height: 22px;
             width: 22px;
             height: 22px;
-            line-height: 22px;
-            &.plus {
+            &.plus, &.trash {
                 right: -11px;
                 top: -11px;
             }
-            &.minus {
+            &.minus, &.change {
                 left: -11px;
                 bottom: -11px;
+            }
+            &.trash, &.change {
+                font-size: 18px;
+                line-height: 26px;
             }
         }
 
@@ -84,13 +94,18 @@
             width: 30px;
             height: 30px;
             line-height: 30px;
-            &.plus {
+
+            &.plus, &.trash {
                 right: -15px;
                 top: -15px;
             }
-            &.minus {
+            &.minus, &.change {
                 left: -15px;
                 bottom: -15px;
+            }
+            &.trash, &.change {
+                font-size: 24px;
+                line-height: 38px;
             }
         }
 
@@ -109,6 +124,7 @@
     top: 25%;
     background: #fff;
     border-radius: 150px;
+    z-index: 4;
 }
 
 .burned {
